Revision history for {{$dist->name}}

{{$NEXT}}

2.032002  2016-05-24 10:00:16-07:00 America/Los_Angeles
 - Fix variation in list context when using ::OnColumnMissing
   (Thanks to David Farrell for the bug report!)
   (Closes GH#63)

2.032001  2016-04-13 22:01:03-07:00 America/Los_Angeles
 - Fix simple deletion and updates for ::DateMethods1
   (Thanks for the report Wes Malone and Erland Injerd, and the help to fix the
   actual bug ribasushi!)

2.032000  2015-11-07 10:34:14-08:00 America/Los_Angeles
 - Add ::ResultClass::Tee

2.031000  2015-07-25 01:20:40-07:00 America/Los_Angeles
 - Add ::ResultSet::Bare (Closes GH#53)

2.030002  2015-07-14 13:43:47-07:00 America/Los_Angeles
 - Clarify docs for ::ResultSet::OneRow (Thanks for the tips Aran Deltac!)
   (Closes GH#48)
 - Add abstract to ::Row::JoinTable (Thanks Gregor Herrmann!)
   (Closes GH#49)

2.030001  2015-07-10 22:38:58-07:00 America/Los_Angeles
 - Make ::Schema::Verifier aggregate errors instead of dying on first one

2.030000  2015-07-01 10:11:42-07:00 America/Los_Angeles
 - Add ::Row::OnColumnMissing (Thanks ZipRecruiter!)

2.029000  2015-06-27 14:16:31-07:00 America/Los_Angeles
 - Add ::ResultSet::OneRow (Thanks Aran Deltac!)

2.028000  2015-05-30 17:06:01-05:00 America/Chicago
 - Add ::Verifier::RelationshipColumnName (Thanks for the idea mcsnolte!)
 - Add ::ResultSet::Shortcut::Search (Closes GH#44 and GH#47) (Thanks moltar!)

2.027001  2015-05-16 11:47:15-05:00 America/Chicago
 - Fix missing POD in ::ResultSet::Explain

2.027000  2015-05-08 19:35:13-05:00 America/Chicago
 - Add ::Verifier::Parent

2.026000  2015-05-02 00:27:28-05:00 America/Chicago
 - Add new ::Schema::Verifier framework
 - ... including inaugural ::Verifier::C3

2.025003  2015-04-06 16:28:20-05:00 America/Chicago
 - Make ::OnColumnChange always allow mutating values before update
 - Fix documented args for `after_column_change`
 - Document ::OnColumnChange semantics a little bit more clearly
